--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lucide-react": "^0.525.0",
     "motion": "^12.23.12",
     "next": "15.4.4",
+    "patch-package": "^8.0.0",
     "pdf-parse": "^1.1.1",
     "pdf2json": "^3.2.0",
     "react": "19.1.0",
