--- a/package.json
+++ b/package.json
@@ -19,16 +19,19 @@
     "@google/genai": "^1.11.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.0",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@supabase/supabase-js": "^2.53.0",
     "@tabler/icons-react": "^3.34.1",
     "@types/canvas-confetti": "^1.9.0",
     "axios": "^1.11.0",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^12.0.0",
     "formidable": "^3.5.4",
     "lenis": "^1.3.8",
     "lucide-react": "^0.525.0",
