--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "firebase": "^12.0.0",
     "formidable": "^3.5.4",
     "lenis": "^1.3.8",
