--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "lenis": "^1.3.8",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.12",
-    "next": "15.4.4",
     "patch-package": "^8.0.0",
     "pdf-parse": "^1.1.1",
     "pdf2json": "^3.2.0",
@@ -63,6 +62,7 @@
     "eslint-plugin-prettier": "^5.5.3",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
+    "next": "^15.4.5",
     "prettier": "^3.6.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.6",
