--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,12 @@
       "./node_modules/@types"
     ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    ".next/types/app/score/page.tsx"
+  ],
   "exclude": ["node_modules"]
 }
