--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "patch-package": "^8.0.0",
     "pdf-parse": "^1.1.1",
     "pdf2json": "^3.2.0",
+    "protobufjs": "^7.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.61.1",
